<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PopupMenuTest</string>
       
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
        
        <string name="searchclass">空闲教室查询</string>
        <string name="searchactivity">活动讲座查询</string>
        <string name="setting">设置</string>
        <string name="input">发布信息</string>
        <string name="client">用户认证</string>
        <string name="huanyingdenglu">欢迎登陆</string>
    <string name="xuehao">学号</string>
    <string name="mima">密码</string>
    <string name="yanzhengma">验证码</string>
         <string name="chongfu">重复已有登陆</string>
        <string name="huodongming">活动名：</string>
        <string name="zhujiangren">主讲人：</string>
        <string name="didian">地点：</string>
        <string name="time">时间：</string>
          <string name="zhubanfang">主办方：</string>
        <string name="detail">详细信息：</string>
        <string name="add">添加数据</string>
        <string name="shuruyonghuming">用户名</string>
        <string name="shurumima">密码</string>
        <string name="denglu">登陆</string>
         <string name="hide_or_show">显示密码</string>
         <string name="success">提交成功</string>
	     <string name="error">提交失败</string>
	     <string name="appname">中财校园通</string>
    <string name="studentNumber">学号：</string>
    <string name="password">密码：</string>
    <string name="enter">登陆</string>
    <string name="exit">退出</string>
    <string name="about">关于</string>
    <string name="team">Android.33开发小组</string>

</resources>
