<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
     >

     <ImageView
        android:id="@+id/logoImageView"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"/>
    
    
    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:text="@string/huanyingdenglu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >
         <TextView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
       		 android:layout_marginRight="10dip"
             android:text="@string/xuehao"
             />
    <EditText 
       	android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
       	android:layout_marginRight="10dip"
       	android:padding="10sp"
        />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >
         <TextView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
       		 android:layout_marginRight="10dip"
             android:text="@string/mima"
             />
     <EditText 
         android:id="@+id/psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
       	android:layout_marginRight="10dip"
       	android:padding="10sp"
        android:password="true"
        />
     </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
         >
         <TextView 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dip"
       		 android:layout_marginRight="10dip"
             android:text="@string/yanzhengma"
             />
      <EditText 
          android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
       	android:layout_marginRight="10dip"
       	android:padding="10sp"
        />
      </LinearLayout>
          <ImageView 
        android:id="@+id/codeimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
       	android:layout_marginRight="10dip"
        android:src="@drawable/jiazai"
        />

          <Button
              android:id="@+id/send"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dip"
       		  android:layout_marginRight="10dip"
       		  android:padding="10sp"
              android:text="@string/enter" />

          <Button
              android:id="@+id/button1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dip"
              android:layout_marginRight="10dip"
              android:padding="10sp"
              android:text="@string/chongfu" />

</LinearLayout>
